--- a/index.html
+++ b/index.html
@@ -56,16 +56,14 @@
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">The Australian Art Anthology</h1>
+                <div class="hero-description hero-cascade-container">
+                    <p class="hero-text-stanza">We bring the voices of Blackman, Coburn, and Cullen out of the shadows to speak to the emerging storytellers of your classroom.</p>
+                    <p class="hero-text-stanza">Narrated by Miranda Otto, Marcus Graham, and Kamahl, this never-before-seen footage is a raw, cinematic journey into Australian art.</p>
+                    <p class="hero-text-stanza">Essential for the Senior Syllabus, these tapes represent the precise moment where the labour ends and the legacy begins.</p>
+                </div>
                 <div class="hero-cta-group">
                     <a href="#timeline" class="btn-hero btn-hero-primary">Watch Trailer</a>
                     <a href="#pricing" class="btn-hero btn-hero-secondary">Preview Resource Pack</a>
-                </div>
-                <div class="hero-description hero-cascade-container" id="hero-paragraph-1">
-                    We bring the voices of Blackman, Coburn, and Cullen out of the shadows to speak to the emerging storytellers of your classroom.
-
-                    Narrated by Miranda Otto, Marcus Graham, and Kamahl, this never-before-seen footage is a raw, cinematic journey into Australian art.
-
-                    Essential for the Senior Syllabus, these tapes represent the precise moment where the labour ends and the legacy begins.
                 </div>
             </div>
         </div>
